# RafGitTools

./: .gitignore  BUG_REPORT.md  BUG_REPORT_VALIDATED.md  CODEX_MEGAPROMPT.md  CONTRIBUTING.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.md  License2.md  Lincense4.md  Makefile  RAFGITTOOLS_ANALYSIS_COMPLETE.md  README.md  THIRD_PARTY_LICENSES.md  UNIFIED_MAP.md  VECTRA_OS.md  build.gradle  build.gradle.simple  build.sh  genesis_bench.c  gradle.properties  rafaelia_tudo_bundle.sha256.txt  rafaelia_tudo_bundle_manifest (1).json  rafaelmreis.md  run_tests.sh  settings.gradle  sss.mfd
.github/: IMPLEMENTATION_COMPLETE.md  PULL_REQUEST_TEMPLATE.md  VALIDATION_CHECKLIST.md  WORKFLOWS_SUMMARY.md  WORKFLOW_BADGES.md  dependabot.yml  labeler.yml  markdown-link-check.json
BrowserRaf/: Browser.sh  Browser_extracted.sh  Exemplo.md  GaiaPhi.txt  GaiaPhi_IA.html  README.md  extract_browser.sh
COMPILER/: rafaelia_factory.sh  rafaelia_factory.sha256.txt  rafaelia_multilang_root_optimizer.sha256.txt
IaCCOMPLIER/: RAFAE_RESUMO_E_DIFF.md  README_RAFAE_REFATORACAO.md  rafea_toro7_q16.h
Livro/: Capítulo 6.md
Raf/: Formalidades.md
app/: build.gradle  (+1 more)
app/src/main/cpp/: CMakeLists.txt  native_bridge.c
app/src/main/cpp/asm/: bootstrap.S  dep_flags.S  dep_io.S  dep_mem.S  dep_sched.S  dep_sync.S  kernel.S  proot.S
app/src/main/cpp/asm/arm32/: bootstrap.S  dep_flags.S  dep_io.S  dep_mem.S  dep_sched.S  dep_sync.S  kernel.S  proot.S
app/src/main/cpp/asm/arm64/: bootstrap.S  dep_flags.S  dep_io.S  dep_mem.S  dep_sched.S  dep_sync.S  kernel.S  proot.S
(+294 files in other folders)
